WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185867
[GTK] WebDriver: Network process crash when running imported/w3c/webdriver/tests/delete_cookie/delete.py::test_unknown_cookie
https://bugs.webkit.org/show_bug.cgi?id=185867
Summary
[GTK] WebDriver: Network process crash when running imported/w3c/webdriver/te...
Carlos Garcia Campos
Reported
2018-05-22 06:25:37 PDT
webkitpy.webdriver_tests.webdriver_w3c_executor: [DEBUG] (WebKitWebDriver:21620): (process:21647): libsoup-CRITICAL **: 15:18:04.117: soup_cookie_jar_get_cookie_list: assertion 'uri != NULL' failed webkitpy.webdriver_tests.webdriver_w3c_executor: [DEBUG] (WebKitWebDriver:21620): RemoteInspectorServer failed to send DBus message: The connection is closed We need to null check the value returned by URL::createSoupURI() before passing it to soup.
Attachments
Patch
(4.03 KB, patch)
2018-05-22 06:28 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-05-22 06:28:00 PDT
Created
attachment 340979
[details]
Patch
Carlos Garcia Campos
Comment 2
2018-05-22 08:10:09 PDT
Committed
r232066
: <
https://trac.webkit.org/changeset/232066
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug